--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7"
+    "@types/classnames": "^2.2.11",
+    "@types/react-router-dom": "^5.1.7",
+    "classnames": "^2.2.6"
   }
 }
